fix bug on tablet size screen styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ label[for=ask-us] {
 
     #description {
         font-size: 170%;
-        top: 20%;
+        top: 30%;
     }
 
     #introduction p {
